# GraphicsEngine

./: AUTHORS  CMakeLists.txt  README.md  README.txt  SUscCGL.config  install.sh  main.cpp  nv-control-warpblend.c  xorg.conf
APP_CHEMISTRY/: CMakeLists.txt  app_chemistry.cpp  chemistry.config  chemistry.cpp
APP_NUMERO/: manip.config  numero.config  numero.cpp
APP_NumeRO/: CMakeLists.txt  app_numero.cpp  install.sh  manip.config  numero.config  numero.cpp
include/: axis.h  canvas.h  cgl.h  colorgenerator.h  cube.h  defs.h  enums.h  ext.h  ext.h.in  flat_shader_frag.h  flat_shader_vert.h  glic.h  group.h  keyboard.h  light.h  material.h  mesh.h  mouse.h  object.h  profile.h  scene.h  simple_shader_frag.h  simple_shader_vert.h  smooth_shader_frag.h  smooth_shader_vert.h  sphere.h  transform.h  view.h  window.h
include/cgl/: axis.h  canvas.h  colorgenerator.h  cube.h  defs.h  defs.h.in  group.h  interface.h  keyboard.h  light.h  material.h  mesh.h  mouse.h  object.h  profile.h  scene.h  shader.h  sphere.h  texture.h  transform.h  view.h  window.h
shaders/: flat_shader.frag  flat_shader.vert  fresnel_shader.frag  fresnel_shader.vert  shader.frag  shader.vert  smooth_shader.frag  smooth_shader.vert
sources/: axis.cpp  canvas.cpp  colorgenerator.cpp  cube.cpp  embedfile.cpp  group.cpp  interface.cpp  keyboard.cpp  light.cpp  lodepng.cpp  material.cpp  mesh.cpp  mouse.cpp  object.cpp  profile.cpp  scene.cpp  shader.cpp  sphere.cpp  texture.cpp  transform.cpp  view.cpp  window.cpp
